--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "xlsx-model-serializer",
+  "name": "@xlsx-model/serializer",
   "version": "0.1.0",
   "main": "dist/index.js",
   "author": "shabashab",
@@ -9,6 +9,10 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
-    "xlsx-model": "^1.0.4"
+    "@types/app-root-path": "^1.2.4",
+    "@types/node": "^14.14.37",
+    "@xlsx-model/models": "^1.0.0",
+    "app-root-path": "^3.0.0",
+    "jsonschema": "^1.4.0"
   }
 }
