--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "main": "dist/index.js",
   "author": "shabashab",
   "license": "MIT",
+  "files": [
+    "schema/**/*",
+    "dist/**/*"
+  ],
   "devDependencies": {
     "prettier": "^2.2.1",
     "typescript": "^4.2.4"
@@ -12,5 +16,8 @@
     "@types/node": "^14.14.37",
     "@xlsx-model/models": "^1.0.0",
     "jsonschema": "^1.4.0"
+  },
+  "scripts": {
+    "prepublishOnly": "tsc --project tsconfig.release.json"
   }
 }
